Updated projects to contain the new PHP updates from the Wordle project

--- a/public/projects.html
+++ b/public/projects.html
@@ -43,16 +43,18 @@
             <h3>Wordle Game</h3>
             <p>The Wordle game is an engaging and interactive word puzzle where players guess a hidden five-letter word within six attempts. Each guess provides feedback through color-coded hints: green indicates the correct letter in the right position, yellow signifies a correct letter in the wrong position, and red marks an incorrect letter. This system helps players narrow down their guesses, blending strategy and vocabulary skills in a fun and challenging way.</p>
             <p><strong>Features</strong></p>
-            <p><strong>Title:</strong> Wordle Game.</p>
+            <p><strong>Title:</strong> Wordle Game</p>
             <p><strong>Gameplay Area:</strong> The central grid allows users to input their guesses with a keyboard positioned below the grid. Each guess provides instant feedback through color-coded hints.</p>
             <p><strong>Popup Notifications:</strong> Users receive notifications for win/loss status through popups.</p>
             <p><strong>Technical Details:</strong> The project is built using HTML, CSS, and JavaScript. The interface is designed to be clean, modern, and responsive, with smooth transitions and clear visual feedback.</p>
             <p><strong>Visual Design:</strong> The game features a dark theme with a color palette that provides clear feedback. The design ensures easy navigation and an engaging user experience.</p>
+            <p><strong>LeaderBoard:</strong> The wordle game provides a leaderboard table that displays the different attmpets the user has had. Everytime an attempt is finished a new score is populated in the leaderboards. The leaderboard table holds up to the 10 most recent scores.</p>
             <p><strong>Screenshots:</strong></p>
-            <img src="images/MainScreen.PNG" alt="Wordle Game" class="project-image">
-            <img src="images/FirstRow.PNG" alt="Wordle Game in Play" class="project-image">
-            <img src="images/WordGuessed.PNG" alt="Wordle Game" class="project-image">
-            <img src="images/FailedToGuessWord.PNG" alt="Wordle Game in Play" class="project-image">
+            <img src="images/NoAttempts.PNG" alt="Wordle Game" class="project-image">
+            <img src="images/IncorrectlyGuessedDuringGame.PNG" alt="Wordle Game in Play" class="project-image">
+            <img src="images/IncorrectlyGuessed.PNG" alt="Wordle Game" class="project-image">
+            <img src="images/CorrectlyGuessed.PNG" alt="Wordle Game in Play" class="project-image">
+            <img src="images/CorrectlyGuessed4Attempt.PNG" alt="Wordle Game in Play" class="project-image">
         </article>
     </section>
 </body>
